styles: multiple project updates

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                         <h6 class="section_subtitle">a little thing about me</h6>
                         <p>Hello!</p>
                         <p>I'm <span>Endurance Ekhoragbon.</span> You can call me <span>Eddie.</span></p>
-                        <p>I design and code interface for web and mobile with more than 6 years of experience and a
-                            wide range of skills in the industry.
+                        <p>I design and code interface for web and mobile with more than 7 years of experience and a wide range of skills in the industry.
                             <br>(FinTech, Music, Gaming and Socials)</p>
 
                         <div class="space-20"></div>
@@ -395,19 +394,29 @@
                 <div class="col-md-9">
                     <div class="owl-carousel service_carousel">
                         <!-- service single item -->
-                        <div class="service_item wow fadeIn" data-wow-delay=".05s">
-                            <span class="service_icon mbri-responsive"></span>
-                            <h4>Web Design</h4>
-                            <p>Designing and developing websites that fit into various screen sizes for best
-                                experience.</p>
-                        </div>
-
-                        <!-- service single item -->
                         <div class="service_item wow fadeIn" data-wow-delay=".15s">
                             <span class="service_icon mbri-cursor-click"></span>
                             <h4>UI/UX Design</h4>
-                            <p>Wireframing, creating high fidelity mockup for mobile and web applications.</p>
+                            <p>Wire-framing, creating high fidelity mockup for mobile and web applications.</p>
                         </div>
+
+                        <!-- service single item -->
+                        <div class="service_item wow fadeIn" data-wow-delay=".25s">
+                            <span class="service_icon mbri-contact-form"></span>
+                            <h4>U.X Research</h4>
+                            <p>User Stories, personas, and problem-solving approaches to product development.</p>
+                        </div>
+
+
+
+                        <!-- service single item -->
+                        <div class="service_item wow fadeIn" data-wow-delay=".05s">
+                            <span class="service_icon mbri-responsive"></span>
+                            <h4>Website Design</h4>
+                            <p>Designing and coding website interfaces that fit into various screen sizes for best experience.</p>
+                        </div>
+
+
 
                         <!-- service single item -->
                         <div class="service_item wow fadeIn" data-wow-delay=".25s">
@@ -415,13 +424,6 @@
                             <h4>U.I Development</h4>
                             <p>Coding interfaces for mobile and web applications, using HTML/CSS, React.js, React
                                 Native, Ionic..</p>
-                        </div>
-
-                        <!-- service single item -->
-                        <div class="service_item wow fadeIn" data-wow-delay=".25s">
-                            <span class="service_icon mbri-contact-form"></span>
-                            <h4>U.X Research</h4>
-                            <p>User Stories, personas, and problem solving approaches to product development.</p>
                         </div>
 
                     </div>
@@ -453,19 +455,19 @@
                         </div>
                     </div>
                     <div class="row work_items zoom-gallery">
+
                         <!-- work single item -->
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="projects/ligare_web_app.html">
-                                        <img class="img-fluid" src="img/projects/ligare-dashboard/ligare-webapp.png"
+                                    <a class="" href="projects/niluk.html">
+                                        <img class="img-fluid" src="img/projects/niluk/niluk-preview.png"
                                              alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Ligare <br>
-                                        Web Application</h4>
-                                    <p>U.I Development</p>
+                                    <h4>Niluk</h4>
+                                    <p>U.I development</p>
                                 </div>
                             </div>
                         </div>
@@ -487,65 +489,47 @@
                             </div>
                         </div>
 
-                        <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
-                            <div class="work_single_item">
-                                <div class="work_image">
-                                    <a class="" href="projects/niluk.html">
-                                        <img class="img-fluid" src="img/projects/niluk/niluk-preview.png"
-                                             alt="">
-                                    </a>
-                                </div>
-                                <div class="work_item_info">
-                                    <h4>Niluk</h4>
-                                    <p>U.I development</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
-                            <div class="work_single_item">
-                                <div class="work_image">
-                                    <a class="" href="projects/easysolar_website.html">
-                                        <img class="img-fluid" src="img/projects/easysolar-website/easysolar-website-preview.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="work_item_info">
-                                    <h4>EasySolar <br> Website</h4>
-                                    <p>U.I development</p>
-                                </div>
-                            </div>
-                        </div>
 
                         <!-- work single item -->
                         <div class="col-lg-4 col-md-6 col-sm-6 design research">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="projects/pallmax.html">
-                                        <img class="img-fluid" src="img/projects/pallamax/pallamax-preview.png" alt="">
+                                    <a class="" href="projects/signature.html">
+                                        <img class="img-fluid" src="img/projects/signature/signature-preview.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Pallmax <br>
-                                        Inventory System</h4>
+                                    <h4>Signature<br>
+                                        Bank</h4>
                                     <p>U.I/U.X Design</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
+<!--                        <div class="col-lg-4 col-md-6 col-sm-6 research design">-->
+<!--                            <div class="work_single_item">-->
+<!--                                <div class="work_image">-->
+<!--                                    <a class="zoom_image" href="img/projects/mudupay/mudupay-preview.png">-->
+<!--                                        <img class="img-fluid" src="img/projects/mudupay/mudupay-preview.png" alt="">-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="work_item_info">-->
+<!--                                    <h4>MuduPay</h4>-->
+<!--                                    <p>U.I/U.X Research and design</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+                        <div class="col-lg-4 col-md-6 col-sm-6 research design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="projects/ligare_web.html">
-                                        <img class="img-fluid" src="img/projects/ligare-web/ligare-web-preview.jpg"
-                                             alt="">
+                                    <a class="" href="projects/akiba.html">
+                                        <img class="img-fluid" src="img/projects/akiba/akiba-preview.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Ligare <br>Official Website</h4>
-                                    <p>U.I development</p>
+                                    <h4>Akiba<br>Finance</h4>
+                                    <p>U.I/U.X Research and design</p>
                                 </div>
                             </div>
                         </div>
@@ -567,34 +551,117 @@
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">
+                        <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/projects/glosscare/glosscare-preview.png">
-                                        <img class="img-fluid" src="img/projects/glosscare/glosscare-preview.png"
-                                             alt="">
+                                    <a class="" href="projects/easysolar_website.html">
+                                        <img class="img-fluid" src="img/projects/easysolar-website/easysolar-website-preview.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Glosscare+</h4>
-                                    <p>U.X Design and development</p>
+                                    <h4>EasySolar <br> Website</h4>
+                                    <p>U.I development</p>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
+                        <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/projects/mentions/mentions-preview.jpg">
-                                        <img class="img-fluid" src="img/projects/mentions/mentions-preview.jpg" alt="">
+                                    <a class="" href="projects/ligare_web.html">
+                                        <img class="img-fluid" src="img/projects/ligare-web/ligare-web-preview.jpg"
+                                             alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Honourable <br> Mentions</h4>
+                                    <h4>Ligare <br>Official Website</h4>
+                                    <p>U.I development</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- work single item -->
+
+                        <div class="col-lg-4 col-md-6 col-sm-6 research design">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="zoom_image" href="img/projects/ceviant/ceviant-preview.jpg">
+                                        <img class="img-fluid" src="img/projects/ceviant/ceviant-preview.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Ceviant <br> FInance</h4>
                                     <p>U.I/U.X Research and design</p>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-6 research design">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="projects/mysupersitter.html">
+                                        <img class="img-fluid" src="img/projects/supersitter/supersitter-preview.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>MySuperSitter</h4>
+                                    <p>U.I/U.X Research and design</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 design research">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="projects/pallmax.html">
+                                        <img class="img-fluid" src="img/projects/pallamax/pallamax-preview.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Pallmax <br>
+                                        Inventory System</h4>
+                                    <p>U.I/U.X Design</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="projects/ligare_web_app.html">
+                                        <img class="img-fluid" src="img/projects/ligare-dashboard/ligare-webapp.png"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Ligare <br>
+                                        Web Application</h4>
+                                    <p>U.I Development</p>
+                                </div>
+                            </div>
+                        </div>
+
+<!--                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">-->
+<!--                            <div class="work_single_item">-->
+<!--                                <div class="work_image">-->
+<!--                                    <a class="zoom_image" href="img/projects/glosscare/glosscare-preview.png">-->
+<!--                                        <img class="img-fluid" src="img/projects/glosscare/glosscare-preview.png"-->
+<!--                                             alt="">-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="work_item_info">-->
+<!--                                    <h4>Glosscare+</h4>-->
+<!--                                    <p>U.X Design and development</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+
 
                         <!-- work single item -->
                         <!--                        <div class="col-lg-4 col-md-6 col-sm-6 design">-->
@@ -677,7 +744,7 @@
                         </div>
                         <div class="testimonial_item">
                             <h5>
-                                "Endurance is a creative user interface developer who is always able to picture every project as though he's the user and this makes him pay attention to every detail.."
+                                "Endurance is a creative user interface developer who is always able to picture every project as though he's the user and this makes him pay attention to every detail."
                             </h5>
                             <p>David <span>(GlossKode Tech)</span></p>
                         </div>
