--- a/projects/pallmax.html
+++ b/projects/pallmax.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta property='og:title' content='eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:title' content='Pallmax | eddieos | Product Designer and U.X Engineer.'/>
     <meta property='og:image' content='https://www.eddieos.me/img/cover-photo/cartooned.jpg'/>
     <meta property='og:description' content='eddieos | Product Designer and U.X Engineer.'/>
     <meta property='og:url' content='https://www.eddieos.me/'/>
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
     <!-- title -->
-    <title>eddieos | U.I/U.X Designer and Developer.</title>
+    <title>Pallmax | eddieos | U.I/U.X Designer and Developer.</title>
     <!-- =====================================
     ============   ALL CSS HERE   ============
     ====================================== -->
