--- a/projects/signature.html
+++ b/projects/signature.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta property='og:title' content='OjirehPrime | eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:title' content=' Signature Bank | eddieos | Product Designer and U.X Engineer.'/>
     <meta property='og:image' content='https://www.eddieos.me/img/cover-photo/cartooned.jpg'/>
     <meta property='og:description' content='eddieos | Product Designer and U.X Engineer.'/>
     <meta property='og:url' content='https://www.eddieos.me/'/>
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
     <!-- title -->
-    <title>OjirehPrime | eddieos | U.I/U.X Designer and Developer.</title>
+    <title>Signature Bank | eddieos | U.I/U.X Designer and Developer.</title>
     <!-- =====================================
     ============   ALL CSS HERE   ============
     ====================================== -->
@@ -99,12 +99,12 @@
     <!-- begin of project wrapper -->
     <div class="qrop_blogs section_single_padding">
         <div class="single_blog_details">
-            <img class="blog_single_img img-fluid w-100" src="../img/projects/ojirehprime/ojirehprime-intro.jpg" alt="">
+            <img class="blog_single_img img-fluid w-100" src="../img/projects/signature/signature-cover.jpg" alt="">
 
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="single_blog_title mb-5">OjirehPrime Mobile App</h2>
+                        <h2 class="single_blog_title mb-5">Signature Bank Mobile Application</h2>
                         <h4 class="mt-2"><span class="mbri-file overview-icon"></span>Overview</h4>
                     </div>
                 </div>
@@ -112,14 +112,15 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">OjirehPrime Financial Services limited is a <b>Fintech startup</b> committed to providing alternative banking services to the regular bank card for the urban dweller who does not want to expose his/her bank cards during online transactions.
+                            <p class="blog_text_head">Signature Bank needs a mobile application for customers to manage their banking needs like opening an account, saving money, making transfer and so much more banking needs..
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Designed <b>User Interface</b> for OjirehPrime mobile application based on OjirehPrime product team requirements</p>
+                            <p class="blog_text_head">Created a Design System as regards following brand guidelines, created multiple iterations of application design following best design practices. Managed UI to take on design guidelines of both iOS and Android platform.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -128,23 +129,23 @@
                         <div class="row mb-3">
                             <div class="col-md-3">
                                 <h5>Services</h5>
-                                <p>U.I/U.X Design</p>
+                                <p>UI/UX Design</p>
                             </div>
                             <div class="col-md-3">
                                 <h5>Client</h5>
-                                <p>OjirehPrime</p>
+                                <p>Elara Solutions</p>
                             </div>
                             <div class="col-md-6">
                                 <h5>Team Members</h5>
-                                <p>Endurance Ekhoragbon <a href="http://www.eddieos.me/" target="_blank"><span
+                                <p>Endurance Ekhoragbon <a href="https://www.eddieos.me/" target="_blank"><span
                                         class="mbri-link"></span></a><br>
                                     <small>
                                         (U.I/U.X Designer)
                                     </small>
                                 </p>
-                                <p>OjirehPrime Team<br>
+                                <p>Etudor<br>
                                     <small>
-                                        (Product Management)
+                                        (Project Manager)
                                     </small>
                                 </p>
                             </div>
@@ -154,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <h5>Tech Stack</h5>
-                                <p>Sketch App, Marvel</p>
+                                <p>Figma</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Platform</h5>
@@ -162,15 +163,11 @@
                                 <p>Android Mobile</p>
                             </div>
                             <div class="col-md-4">
-                                <h5>Status - <b>2019</b></h5>
-                                <p>In development</p>
+                                <h5>Status</h5>
+                                <p>Completed - <b>2023</b></p>
                                 <p>
-                                    <a href="https://marvelapp.com/prototype/b64hd0h/screens" target="_blank"
-                                       class="btn btn-outline-info"><span class="mbri-cursor-click"></span></a>
-                                    <a href="#"
-                                       target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
-                                    <a href="#"
-                                       target="_blank" class="btn btn-dark"><span class="mbri-apple"></span></a>
+                                    <a href="https://www.signaturebankng.com/" target="_blank"
+                                       class="btn btn-info"><span class="mbri-globe"></span></a>
                                 </p>
                             </div>
                         </div>
@@ -183,21 +180,18 @@
                     <div class="col-lg-12 col-md-12 text-center">
                         <div class="mb-5">
                             <h4 class="mt-2 mb-3"><span class="mbri-image-gallery overview-icon"></span></h4>
-                            <h2 class="single_blog_title mb-3">Marvel App Interactive Prototype</h2>
+                            <h2 class="single_blog_title mb-3">Mobile App Design Preview</h2>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
-                        <p>Designed mobile application using SketchApp for Mac, then later exported to Marvel for quick
-                            prototype preview </p>
+                        <p>Design system, Component and color declarations, Dark mode, Typography and so much more..</p>
 
                     </div>
 
-
                     <div class="col-lg-12 text-center">
-
-                        <iframe src="https://marvelapp.com/b64hd0h?emb=1&iosapp=false&frameless=false" width="347"
-                                height="680" allowTransparency="true" frameborder="0"></iframe>
+                        <div style="font-size: 240px" class="mbri-lock text-primary"></div>
+                        <h2 class="mt-4">Project preview available on request</h2>
                     </div>
 
 
@@ -223,7 +217,7 @@
                             <p class="testimonial_quote mbri-quote-left mr-3"></p>
                             <div>
                                 <h5>Thanks Eddieos.</h5>
-                                <p>Edoka Idoko <span>(OjirehPrime)</span></p>
+                                <p>Etudor</p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
