styles: job role updated

--- a/index.html
+++ b/index.html
@@ -197,10 +197,19 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
                             <div class="experience_single">
+                                <h4>silverorange <a href="https://www.silverorange.com/" target="_blank"><span
+                                        class="mbri-link"></span></a></h4>
+                                <p>Senior Web and App Designer</p>
+                                <p>April, 2023 - Now</p>
+                                <p>Remote</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
+                            <div class="experience_single">
                                 <h4>Easy Solar <a href="https://easysolar.org/" target="_blank"><span
                                         class="mbri-link"></span></a></h4>
                                 <p>Design Lead</p>
-                                <p>Dec, 2019 - Now</p>
+                                <p>Dec, 2019 - April, 2023</p>
                                 <p>Remote</p>
                             </div>
                         </div>
