styles: fix job experiences

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h6 class="section_subtitle">a little thing about me</h6>
                         <p>Hello!</p>
                         <p>I'm <span>Endurance Ekhoragbon.</span> You can call me <span>Eddie.</span></p>
-                        <p>I design and code interface for web and mobile with more than 7 years of experience and a wide range of skills in the industry.
+                        <p>I design and code interface for web and mobile and other digital landscapes with more than 8 years of experience and a wide range of skills in the industry.
                             <br>(FinTech, Music, Gaming and Socials)</p>
 
                         <div class="space-20"></div>
@@ -222,6 +222,39 @@
                                 <p>Remote</p>
                             </div>
                         </div>
+<!--                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".25s">-->
+<!--                            <div class="experience_single sm-mt-30">-->
+<!--                                <h4>Tunga and DevCenter</h4>-->
+<!--                                <p>U.I/U.X Designer and Developer</p>-->
+<!--                                <p>2015 - Now</p>-->
+<!--                                <p>Remote</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".15s">-->
+<!--                            <div class="experience_single xsm-mt-30">-->
+<!--                                <h4>MCOMM Solutions</h4>-->
+<!--                                <p>U.I/U.X Engineer</p>-->
+<!--                                <p>Feb, 2018 - Aug, 2018</p>-->
+<!--                                <p>Lagos, Nigeria</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".25s">-->
+<!--                            <div class="experience_single sm-mt-30">-->
+<!--                                <h4>GlossKode Solutions</h4>-->
+<!--                                <p>Lead Interface Designer</p>-->
+<!--                                <p>April, 2017 - Feb, 2018</p>-->
+<!--                                <p>Lagos, Nigeria</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".25s">-->
+<!--                            <div class="experience_single sm-mt-30">-->
+<!--                                <h4>SoftQuest Systems Limited</h4>-->
+<!--                                <p>Web Designer</p>-->
+<!--                                <p>Aug, 2016 - Mar, 2017</p>-->
+<!--                                <p>Lagos, Nigeria</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                    </div>
                     <!-- end of experience info -->
 
                     <div class="space-40"></div>
@@ -706,7 +739,7 @@
                 </div>
                 <div class="col-md-3 wow fadeIn" data-wow-delay=".05s">
                     <p class="testimonial_quote mbri-quote-right"></p>
-                    <h6 class="section_subtitle">trustred from over<br>20+ clients</h6>
+                    <h6 class="section_subtitle">trustred from over<br>10+ clients</h6>
                 </div>
                 <div class="col-md-6 wow fadeIn" data-wow-delay=".15s">
                     <div class="owl-carousel testimonial_carousel">
