--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <h4>silverorange <a href="https://www.silverorange.com/" target="_blank"><span
                                         class="mbri-link"></span></a></h4>
                                 <p>Senior Web and App Designer</p>
-                                <p>April, 2023 - Now</p>
+                                <p>April, 2023 - May, 2024</p>
                                 <p>Remote</p>
                             </div>
                         </div>
