styles: website meta updated with necessary contents

--- a/about.html
+++ b/about.html
@@ -4,15 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta property='og:title' content='eddieos | Senior Product Designer'/>
-  <meta property='og:image' content='https://majestic-manatee-5399cf.netlify.app/assets/imgs/logo/memoji.png'/>
-  <meta property='og:description' content='eddieos | Senior Product Designer'/>
+  <meta property='og:image' content='https://www.eddieos.me/assets/imgs/logo/og-meta.png'/>
+  <meta property='og:description' content='A Product Designer with a passion for designing beautiful and intuitive user experiences.'/>
   <meta property='og:url' content='https://www.eddieos.me/'/>
   <meta property='og:u' content='https://www.eddieos.me/'/>
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="https://www.eddieos.me/">
+  <meta name="twitter:creator" content="@eddieosuiux">
+  <meta name="twitter:title" content="eddieos | Senior Product Designer">
+  <meta name="twitter:description" content="A Product Designer with a passion for designing beautiful and intuitive user experiences.">
+  <meta name="twitter:image" content="https://www.eddieos.me/assets/imgs/logo/og-meta.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="eddieos | Senior Product Designer">
   <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
-  <meta name="author" content="eddieos | Senior Product Designer">
+  <meta name="author" content="Endurance (Eddie) Ekhoragbon | Senior Product Designer">
 
   <title>About - eddieos | Senior Product Designer.</title>
 
